# PSX-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: cdrom.h  coprocessor.h  cpu.h  debug.h  dma.h  frontend.h  gpu.h  interrupt.h  io.h  logging.h  main.h  memory.h  tests.h  timer.h  utils.h
includes/frontend/: gl.h  ui.h
includes/glad/: glad.h
src/: cdrom.c  coprocessor.c  cpu.c  debug.c  dma.c  frontend.c  gpu.c  interrupt.c  io.c  logging.c  main.c  memory.c  tests.c  timer.c
src/frontend/: gl.c  ui.c
src/glad/: glad.c
